# agar_newtech

./: .gitignore  PROJECT_ZH.md  README.md  data_stats.json  mlflow.db  pyproject.toml  requirements.txt  stat_readme.md
conf/: config.yaml
conf/data/: agar.yaml  coco_single_colony.yaml
conf/eval/: default.yaml
conf/experiment/: exp_agar7dataset_standard_coco.yaml  exp_agar_lower_from_coco_cache.yaml  exp_agarv2_resnet50.yaml  exp_coco2026_agar_countable_4k.yaml  exp_ddp_smoke.yaml  exp_ddp_smoke_coco2026_agar_countable_4k.yaml  exp_quick_baseline.yaml  exp_stage1_frcnn_single_colony.yaml  exp_tiny_steps.yaml
conf/model/: fasterrcnn.yaml  fasterrcnn_resnet101.yaml
conf/train/: default.yaml
scripts/: ddp_diag.sh  ddp_triage.sh  run_ddp.sh
src/agar/: cli.py  eval.py  launch_check.py  predict.py  run.py  smoke.py  train.py
src/agar/data/: agar_dataset.py  coco_export.py  coco_paths.py  datamodule.py  fo_to_coco.py  inspect_coco.py  remap_coco_single_class.py  transforms.py
src/agar/engine/: callbacks.py  fabric_loop.py
src/agar/models/: detector.py  factory.py
src/agar/tools/: anchor_stats.py  ddp_sanity.py  parse_topo_affinity.py  pin_and_exec.py
src/agar/tracking/: mlflow_logger.py  tb_logger.py
src/agar/utils/: config.py  distributed.py  io.py  launch.py  rich_log.py  seed.py  tf32.py
tests/: test_align_cfg_for_torchrun.py  test_collate.py  test_dataset_contract.py  test_eval_smoke.py  test_fo_to_coco_import.py  test_import_inspect_coco.py  test_run_parse_devices.py  test_topo_parse.py
